# Finance-Assistance

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/: mcp.json
app/: config.py  database.py  main.py  models.py  schemas.py
app/routes/: api.py  web.py
app/services/: category_service.py  csv_sync.py  importer.py  investment_service.py  normalizer.py  parser.py  rule_engine.py  transfer_service.py
app/static/css/: app.css
app/templates/: accounts.html  action.html  base.html  categories.html  dashboard.html  import.html  rules.html  spending.html  transactions.html
data/: .gitkeep
mcp_server/: INSTRUCTIONS.md  category_classifier.py  converters.py  server.py
statements/: .gitkeep
tests/: test_category_classifier.py  test_importer.py  test_investments.py  test_normalizer.py  test_parser.py  test_transfers.py
